--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.5",
         "mcamara/laravel-localization": "^1.6",
         "pbmedia/laravel-ffmpeg": "^7.5",
+        "pusher/pusher-php-server": "^7.0",
         "rosell-dk/webp-convert": "^2.6"
     },
     "require-dev": {
